# kokoro-g2p

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOVER.md  README.md  build.rs  build_android.bat  build_android.sh
benches/: g2p_benchmark.rs
bindings/kotlin/: KokoroTokenizer.kt
bindings/swift/: kokoro_g2p.h
src/: g2p.rs  lexicon.rs  lib.rs  pipeline.rs  preprocessor.rs  tokenizer.rs
src/de/: mod.rs  normalizer.rs
src/es/: mod.rs  normalizer.rs
src/id/: mod.rs  normalizer.rs
src/it/: mod.rs  normalizer.rs
src/ja/: mod.rs  phoneme_map.rs  reading.rs
src/ko/: mod.rs  normalizer.rs
src/pt/: mod.rs  normalizer.rs
src/tr/: mod.rs  normalizer.rs
src/vi/: mod.rs  normalizer.rs
src/zh/: mod.rs  normalizer.rs  phoneme_mapper.rs  pinyin.rs  polyphone.rs  segmenter.rs  tone_sandhi.rs
tests/: README.md  espeak_validation.py  validation.rs
