[package]
name = "kokoro-g2p"
version = "0.1.0"
edition = "2021"
description = "G2P (Grapheme-to-Phoneme) engine for Kokoro TTS model"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
jni = ["dep:jni"]

[dependencies]
jni = { version = "0.21", optional = true }
regex = "1.10"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
once_cell = "1.19"
phf = { version = "0.11", features = ["macros"] }
log = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "g2p_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Size optimization for mobile
panic = "abort"
strip = true
